--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^5.8.0",
+    "@fullcalendar/daygrid": "^5.0.0",
+    "@fullcalendar/vue": "^5.8.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
+    "chart.js": "^2.8.0",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
+    "vue-chartkick": "^1.1.0",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
