--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "strictPropertyInitialization": false,
     "target": "esnext",
     "module": "esnext",
-    "strict": true,
+    "strict": false,
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
